Hello World
Added a hello world endpoint that responds with the request from any user their roles.
