# tools/openapi.yaml
@@ -1,7 +1,7 @@
 ---
 openapi: 3.0.3
 info:
-  title: VCell API (development)
+  title: VCell API (test)
   description: VCell API
   termsOfService: Your terms of service here
   contact:
@@ -15,6 +15,19 @@ info:
 servers:
 - url: http://localhost:9000
 paths:
+  /api/helloworld:
+    get:
+      tags:
+      - Hello World
+      summary: Get hello world message.
+      operationId: getHelloWorld
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HelloWorldMessage'
   /api/publications:
     get:
       tags:
@@ -161,6 +174,11 @@ components:
       format: date
       type: string
       example: 2022-03-10
+    HelloWorldMessage:
+      type: object
+      properties:
+        message:
+          type: string
     MathmodelRef:
       type: object
       properties:
