# vcell-rest/src/main/java/org/vcell/restq/models/HelloWorldMessage.java
@@ -1,0 +1,16 @@
+package org.vcell.restq.models;
+
+import cbit.vcell.modeldb.BioModelReferenceRep;
+import cbit.vcell.modeldb.MathModelReferenceRep;
+import cbit.vcell.modeldb.PublicationRep;
+import com.fasterxml.jackson.annotation.JsonFormat;
+import org.vcell.util.document.KeyValue;
+
+import java.util.Arrays;
+import java.util.Date;
+
+public record HelloWorldMessage(String message) {
+
+}
+
+
