# webapp-ng/src/app/core/modules/openapi/model/models.ts
@@ -1,4 +1,5 @@
 export * from './biomodel-ref';
+export * from './hello-world-message';
 export * from './mathmodel-ref';
 export * from './publication';
 export * from './user';
